# gesture-controlled-car-with-gripper

./: README.md
Car System with Crane/: CMakeLists.txt  car.c  car.h  main.c  main.h  servo.h
Control System/: CMakeLists.txt  main.c
NRF_driver/: Nrf.c
car only/: CMakeLists.txt  main.c
car with joystick/: CMakeLists.txt  main.c
mpu only/: CMakeLists.txt  main.c
mpu with led and buzzer/: CMakeLists.txt  main.c
nrf driver/: Nrf.c  Nrf.h  main.c
nrf receiver/: CMakeLists.txt  FreeRTOSConfig.h  Nrf.c  Nrf.h  State_Machine.c  car.c  car.h  main.c  main.h  servo.c  servo.h
nrf sender/: Nrf.c  Nrf.h  main.c
servo/: CMakeLists.txt  main.c
